Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_My_Shifts_Adjust_Columns__mdt/Portal_V2_My_Shifts_Adjust_Columns__mdt.object-meta.xml
<CustomObject>
    <label>Portal V2 - My Shifts - Adjust Column</label>
    <pluralLabel>Portal V2 - My Shifts - Adjust Columns</pluralLabel>
</CustomObject>