Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_My_Shifts_Adjust_Columns__mdt/fields/Aggregate_type__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_type__c</fullName>
    <label>Aggregate type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Average</fullName>
                <default>true</default>
                <label>Average</label>
            </value>
            <value>
                <fullName>Lowest</fullName>
            </value>
            <value>
                <fullName>Highest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>