Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_My_Shifts_Adjust_Columns__mdt/fields/Date_filter_type__c.field-meta.xml
<CustomField>
    <fullName>Date_filter_type__c</fullName>
    <label>Date filter type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greater than</fullName>
                <default>true</default>
                <label>Greater than</label>
            </value>
            <value>
                <fullName>Less than</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>