Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_My_Shifts_Adjust_Columns__mdt/fields/Include_in_temp_feedback_modal__c.field-meta.xml
<CustomField>
    <fullName>Include_in_temp_feedback_modal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should only be checked for a sub-table column</inlineHelpText>
    <label>Include in temp feedback modal</label>
    <type>Checkbox</type>
</CustomField>