Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_My_Shifts_Adjust_Columns__mdt/fields/Selected_By_Default__c.field-meta.xml
<CustomField>
    <fullName>Selected_By_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected By Default</label>
    <type>Checkbox</type>
</CustomField>