Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_My_Shifts_Adjust_Columns__mdt/fields/Table_Type__c.field-meta.xml
<CustomField>
    <fullName>Table_Type__c</fullName>
    <label>Table Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
                <default>true</default>
                <label>Main</label>
            </value>
            <value>
                <fullName>Sub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>