Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_My_Shifts_Adjust_Columns__mdt/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <label>View</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
                <default>true</default>
                <label>Candidate</label>
            </value>
            <value>
                <fullName>Job Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>