Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_My_Shifts_Adjust_Columns__mdt/validationRules/Date_filter_must_have_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_filter_must_have_type</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Filter_Type__c, &apos;Date&apos;) &amp;&amp; ISBLANK(TEXT(Date_filter_type__c))</errorConditionFormula>
    <errorMessage>A Date filter must have a type</errorMessage>
</ValidationRule>