Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_My_Shifts_Adjust_Columns__mdt/validationRules/filtered_field_must_have_filter_type.validationRule-meta.xml
<ValidationRule>
    <fullName>filtered_field_must_have_filter_type</fullName>
    <active>true</active>
    <errorConditionFormula>Filterable__c = TRUE &amp;&amp; ISBLANK(TEXT(Filter_Type__c))</errorConditionFormula>
    <errorMessage>A filterable field must have an associated filter type</errorMessage>
</ValidationRule>