Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_My_Shifts_Adjust_Columns__mdt/validationRules/Include_in_temp_feedback_only_sub.validationRule-meta.xml
<ValidationRule>
    <fullName>Include_in_temp_feedback_only_sub</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(Table_Type__c, &apos;Sub&apos;) &amp;&amp;   Include_in_temp_feedback_modal__c = TRUE</errorConditionFormula>
    <errorMessage>A column can only be included in the edit temp feedback modal if it is part of a sub table</errorMessage>
</ValidationRule>