Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_My_Shifts_Adjust_Columns__mdt/validationRules/Rollup_must_have_child_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Rollup_must_have_child_name</fullName>
    <active>true</active>
    <errorConditionFormula>Rollup_from_children__c = true &amp;&amp; (ISBLANK(Child_Column_Name__c) || ISBLANK(TEXT( Aggregate_type__c )))</errorConditionFormula>
    <errorMessage>A rollup field must have a child column name and aggregate type</errorMessage>
</ValidationRule>