Frankbelford/uatv1ba/force-app/main/default/objects/Portal_V2_My_Shifts_Adjust_Columns__mdt/validationRules/Sub_table_cannot_be_rollup.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_table_cannot_be_rollup</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Table_Type__c, &apos;Sub&apos;) &amp;&amp;   Rollup_from_children__c = true</errorConditionFormula>
    <errorMessage>A sub table column cannot act as a rollup</errorMessage>
</ValidationRule>